--- a/cinco-en-linea/cinco-en-linea.csproj
+++ b/cinco-en-linea/cinco-en-linea.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C0F55DB9-8247-4816-9E85-26AD28F2552F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -53,6 +53,12 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Hovertable.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Hovertable.Designer.cs">
+      <DependentUpon>Hovertable.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
