Mejorado el Hovertable y el stripe de selección
Animaciones relacionadas con el hovertable en el tablero. Preparándome
para el primer merge con la lógica dentro de unos días (espero :D)

--- a/cinco-en-linea/cinco-en-linea.csproj
+++ b/cinco-en-linea/cinco-en-linea.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUIUtils.cs" />
     <Compile Include="Hovertable.cs">
       <SubType>Component</SubType>
     </Compile>
